Bug 408618 - SIGSEGV when clicking layer->select opaque on 4.2.1 (git-01440fb)
Summary: SIGSEGV when clicking layer->select opaque on 4.2.1 (git-01440fb)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.1
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-12 17:38 UTC by epicwrathssin
Modified: 2019-06-17 08:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
thread apply all bt SIGSEGV KisSelectionManager_selectOpaqueOnNode (18.50 KB, text/plain)
2019-06-12 17:38 UTC, epicwrathssin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description epicwrathssin 2019-06-12 17:38:22 UTC
Created attachment 120819 [details]
thread apply all bt SIGSEGV KisSelectionManager_selectOpaqueOnNode

SUMMARY

This is the backtrace of a crash caused when right clicking a layer and clicking select opaque (or menu->select->select opaque->select opaque(replace)).  I don't remember the layer type, but I can provide the core dump if requested.  It's too large to attach and I would prefer it not to be generally available.

STEPS TO REPRODUCE
Unknown

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 19.04 / Linux 5.0.0-16-generic
(available in About System)
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION

Attached is the output from 'thread apply all bt'
A core dump is available if requested.
Binary was compiled as a RelWithDebInfo build.
Krita reports version as 4.2.1 (git-01440fb)
Comment 1 Dmitry Kazakov 2019-06-13 14:03:37 UTC
Git commit f23981eed0172f897c1c9039e189f065fbe13b3c by Dmitry Kazakov.
Committed on 13/06/2019 at 14:03.
Pushed by dkazakov into branch 'master'.

Transoform masks don't have any paint devices

... so we shouldn't assert on it.

M  +4    -1    libs/ui/kis_selection_manager.cc

https://invent.kde.org/kde/krita/commit/f23981eed0172f897c1c9039e189f065fbe13b3c
Comment 2 Halla Rempt 2019-06-17 08:18:04 UTC
Git commit 0cb07cd7acab0cc4109bd78852a3eb60023292dd by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 17/06/2019 at 08:16.
Pushed by rempt into branch 'krita/4.2'.

Transoform masks don't have any paint devices

... so we shouldn't assert on it.

M  +4    -1    libs/ui/kis_selection_manager.cc

https://invent.kde.org/kde/krita/commit/0cb07cd7acab0cc4109bd78852a3eb60023292dd