Transoform masks don't have any paint devices

... so we shouldn't assert on it.

BUG:408618